--- a/.gitconfig
+++ b/.gitconfig
@@ -11,6 +11,8 @@
 	co = checkout
 	st = status
 	mg = merge --no-ff
+	br = branch
+	df = diff
 	plog = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
 [core]
 	excludesfile = ~/.gitignore_global
