Introduce video_for_sound.sh

--- a/.gitconfig
+++ b/.gitconfig
@@ -26,3 +26,8 @@
 	trustExitCode = true
 [color]
 	ui = true
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
