--- a/.gitconfig
+++ b/.gitconfig
@@ -17,7 +17,7 @@
 	plog = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
 	slog = log --pretty=format:'%H'
 [core]
-	excludesfile = ~/.gitignore_global
+	excludesfile = /Users/valentine/.gitignore_global
 [difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
 	path = 
